[workspace]
members = [
  "storage",
  "engine",
  "cli",
  "queue",
  "agent",
  "test-runner",
  "utils"
]

[workspace.dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
clap = { version = "3.2.23", features = ["derive"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
log = "0.4.17"
mdns-sd = { version = "0.5.9", default-features = false, features = ["async"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
wasi-common = "3.0.1"
