[workspace]
members = [
  "engine",
  "cli",
  "api-client",
  "agent",
  "test-runner",
  "utils"
]

[workspace.dependencies]
anyhow = "1.0.66"
atty = "0.2.14"
axum = "0.6.1"
clap = { version = "3.2.23", features = ["derive"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.13",  default-features = false, features = ["brotli", "json", "rustls-tls", "stream", "native-tls-vendored"] }
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
ssri = "8.0.0"
thiserror = "1.0.38"
toml = "0.7.0"
tokio = { version = "1.25.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"] }
uuid = { version = "1.2.2", features = ["serde", "v4"] }
wasi-common = "5.0.0"
wasmtime = "5.0.0"
wasmtime-wasi = "5.0.0"

