[package]
name = "serval-agent"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.6.1", features = ["json", "multipart"] }
dotenvy = "0.15.6"
engine = { path = "../engine" }
env_logger = { workspace = true }
http = "0.2.8"
hyper = "0.14.23"
log = "0.4.17"
metrics = "0.20.1"
metrics-exporter-log = { version = "0.4.0", optional = true }
metrics-exporter-prometheus = { version = "0.11.0", optional = true }
metrics-exporter-statsd = { version = "0.4.0", optional = true }
metrics-exporter-tcp = { version = "0.7.0", optional = true }
once_cell = "1.17.0"
reqwest = { workspace = true }
serde = { version = "1.0.149", features = ["serde_derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = "0.1.37"
tracing-opentelemetry = { version = "0.18.0", optional = true }
utils = { path = "../utils" }
uuid = { workspace = true }

[features]
metrics-log = ["dep:metrics-exporter-log"]
metrics-prometheus = ["dep:metrics-exporter-prometheus"]
metrics-statsd = ["dep:metrics-exporter-statsd"]
metrics-tcp = ["dep:metrics-exporter-tcp"]
tracing-otel = ["dep:tracing-opentelemetry"]
