[package]
name = "serval-agent"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.67"
axum = { version = "0.6.1", features = ["json", "multipart"] }
cacache = { version = "11.0.0", default-features = false, features = ["tokio-runtime"] }
serval-client = { path = "../client" }
dotenvy = "0.15.6"
engine = { path = "../engine" }
env_logger = { workspace = true }
http = "0.2.8"
hyper = "0.14.23"
log = "0.4.17"
metrics = "0.20.1"
metrics-exporter-log = "0.4.0"
metrics-exporter-tcp = "0.7.0"
once_cell = "1.17.0"
reqwest = { workspace = true }
serde = { version = "1.0.149", features = ["serde_derive"] }
serde_json = { workspace = true }
ssri = "8.0.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
utils = { path = "../utils" }
uuid = { workspace = true }
bytes = "1.4.0"
