[package]
name = "castaway"
version = "0.1.0"
edition = "2021"
license = "MIT" # until we figure out something better

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
axum = "0.6.1"
clap = { version = "4.0.29", features = ["derive"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
hex = "0.4.3"
log = "0.4.17"
sha1 = "0.10.5"
tokio = { version = "1.22.0", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"] }
