[package]
name = "castaway"
version = "0.1.0"
edition = "2021"
license = "MIT" # until we figure out something better

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
env_logger = { workspace = true }
hex = "0.4.3"
log = { workspace = true }
mdns-sd = "0.5.9"
sha2 = "0.10.6"
tokio = { workspace = true }
tokio-util = { workspace = true }
utils = { path = "../utils" }
