[package]
name = "serval"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

[dependencies]
anyhow = { workspace = true }
atty = "0.2.14"
clap = { version = "3.2.23", features = ["derive", "wrap_help"] } # older version on purpose
humansize = "2.1.3"
log = { workspace = true }
loggerv = "0.7.2"
mdns-sd = { workspace = true }
owo-colors = "3.5.0"
prettytable = "0.10.0"
reqwest = { version = "0.11.13", features = ["blocking", "brotli", "json", "multipart", "rustls"] }
serde_json = { workspace = true }
term_grid = "0.2.0"
tokio = { workspace = true }
utils = { path = "../utils" }
uuid = { workspace = true }
