[package]
name = "serval-client"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

[dependencies]
anyhow = { workspace = true }
log = { workspace = true }
owo-colors = "3.5.0"
reqwest = { version = "0.11.13", default-features = false, features = ["deflate", "brotli", "json", "multipart", "stream", "rustls-tls"] }
serde_json = { workspace = true }
tokio = { workspace = true }
utils = { path = "../utils" }
uuid = { workspace = true }
