[package]
name = "wait-for-it-daemon"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.6.1", features = ["json"] }
dotenvy = "0.15.6"
env_logger = "0.10.0"
log = "0.4.17"
reqwest = { version = "0.11.13",  default-features = false, features = ["brotli", "json", "rustls"] }
tokio =  { version = "1.23.0", features = ["full"] }
