[package]
name = "wait-for-it-daemon"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

[dependencies]
anyhow = { workspace = true }
axum = { version = "0.6.1", features = ["json", "multipart"] }
dotenvy = "0.15.6"
engine = { path = "../engine" }
env_logger = "0.10.0"
http = "0.2.8"
log = "0.4.17"
reqwest = { version = "0.11.13",  default-features = false, features = ["brotli", "json", "rustls"] }
serde = { version = "1.0.149", features = ["serde_derive"] }
serde_json = "1.0.89"
tokio =  { version = "1.23.0", features = ["full"] }
utils = { path = "../utils" }
uuid = { workspace = true }
