[package]
name = "engine"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
utils = { path = "../utils" }
wasi-common.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspce = true
