[package]
name = "engine"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
cranelift-codegen-meta = "0.92.0"
log = { workspace = true }
utils = { path = "../utils" }
thiserror = { workspace = true }
wasi-common = { workspace = true }
wasmtime = { workspace = true }
wasmtime-wasi = { workspace = true }
wasi-experimental-http = { git = "https://github.com/serval/wasi-experimental-http.git", branch = "update-dependencies" }
wasi-experimental-http-wasmtime = { git = "https://github.com/serval/wasi-experimental-http.git", branch = "update-dependencies" }
