[package]
name = "pounce"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
clap = { version = "3.2.23", features = ["derive", "wrap_help"] } # older version on purpose
reqwest = { version = "0.11.13", features = ["blocking", "brotli", "json", "multipart", "rustls"] }
serde_json = "1.0.89"
uuid = { workspace = true }
