[package]
name = "pounce"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

[dependencies]
anyhow = { workspace = true }
atty = "0.2.14"
clap = { version = "3.2.23", features = ["derive", "wrap_help"] } # older version on purpose
mdns-sd = "0.5.9"
reqwest = { version = "0.11.13", features = ["blocking", "brotli", "json", "multipart", "rustls"] }
serde_json = "1.0.89"
uuid = { workspace = true }
