[package]
name = "queue"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono = { version = "0.4.23", features = ["serde"] }
clap.workspace = true
dotenvy.workspace = true
env_logger = "0.10.0"
log.workspace = true
once_cell = "1.16.0"
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.23.1", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
utils = { path = "../utils" }
