[package]
name = "queuey-queue"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
chrono = { version = "0.4.23", features = ["serde"] }
clap = { workspace = true }
dotenvy = "0.15.6"
env_logger = "0.10.0"
log = "0.4.17"
once_cell = "1.16.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
tokio = { version = "1.22.0", features = ["full"] }
uuid = { version = "1.2.2", features = ["v4", "fast-rng", "macro-diagnostics", "serde"] }
utils = { path = "../utils" }
