[package]
name = "test-runner"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

[dependencies]
anyhow.workspace = true
atty.workspace = true
clap.workspace = true
engine = { path = "../engine" }
owo-colors = "3.5.0"
serde.workspace = true
serde_json.workspace = true
toml = "0.7.3"
utils = { path = "../utils" }
wasi-common.workspace = true
wasmtime-wasi.workspace = true
