[package]
name = "utils"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause-Patent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.67"
axum = { workspace = true }
bincode = "2.0.0-rc.2"
cacache = { version = "11.0.0", default-features = false, features = ["tokio-runtime"] }
hex = "0.4.3"
if-addrs = "0.10.1"
kaboodle = "0.1.5"
log = { workspace = true }
once_cell = "1.17.1"
regex = "1.7.3"
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = "0.10.6"
ssri = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
uuid = { workspace = true }
wasi-common = { workspace = true }
